[package]
name = "rust-tiny-compiler"
version = "0.1.0"
authors = ["Koji Ishimoto <koji.ishimoto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "compiler"
path = "src/lib.rs"

[dependencies]
regex = "1.5"
